tests/paczka1/fuzzy1/67126832.err
Error in line 8: lqYTmSm6A2g S375 9,7
Error in line 7: MVt S560 9,8
Error in line 23: lqYTmSm6A2g S375 79,8
